# demo

./: .gitignore  .jupyternotebookrc  README.md  coding.md  pyproject.toml  sql_app.db  workflow
.github/workflows/: taskmates-issue-comment-workflow.yml  taskmates-pr-comment-workflow.yml
Features/0. Introduction/: What is Taskmates?.md
Features/1. Expert-led, AI-accelerated/: ai-accelerated.md
Features/10. Jupyter environment/: examples-of-outputs.md  interrupt.md  jupyter-environment.md
Features/11. Other/dalle3/: dalle3.md
Features/11. Other/google/: google.md
Features/11. Other/pdf/: pdf.md  position.md
Features/11. Other/rag/: chromadb.md  intellij_sdk.md
Features/11. Other/read-images/: read-images.md
Features/11. Other/run-inside-docker/: run-inside-docker.md
Features/2. Reliable code/: reliable-code.md
Features/3. Local tools/: local-tools.md
Features/4. Interact and refine/: take-control.md
Features/5. Enterprise-ready/: enterprise-ready.md
Features/6. No vendor lock-in/: no-vendor-lock-in.md
Features/7. Custom tools/tool_calls/: conversation.md  error.md  filesystem.md  google_search.md  multiple_tool_calls.md  parallel_tool_calls.md  run_shell_command_with_progress.md  shell.md
Features/8. Custom agents/browser/: browser-latest-news-ai.md  elon-musk-algorithm.md  (+1 more)
api/: main.py  models.py
api/endpoints/: users.py
demo/0. Introduction/: introduction.md
demo/1. AI First/: ai-first.md
demo/9. Jupyter environment/: charts.md  jupyter-notebooks.md
tests/: conftest.py  sql_app.db  test_users.py  test_users_endpoint.py
(+12 files in other folders)
